--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
 	},
 	"dependencies": {
 		"@nuxtjs/axios": "^5.13.6",
+		"@nuxtjs/firebase": "^8.0.0",
 		"@twurple/api": "^5.0.9",
 		"@twurple/auth": "^5.0.9",
 		"core-js": "^3.19.1",
-		"nuxt": "^2.13.3",
+		"firebase": "^9.4.1",
+		"nuxt": "^2.15.8",
 		"nuxt-property-decorator": "^2.9.1",
 		"vuetify": "^2.5.14"
 	},
